# kinohub

./: .gitattributes  .pre-commit-config.yaml  README.md  env_sample  pyproject.toml
kinohub/core/: settings.py  urls.py
kinohub/core/settings/: base.py  local.py
kinohub/movies/: admin.py  context_proccessors.py  models.py  urls.py  views.py
kinohub/movies/management/commands/: load_movies.py
kinohub/movies/migrations/: 0001_initial.py  0002_movie_release_year.py  0003_movie_changed_on_movie_created_on.py  0004_category_movie_category.py  0005_category_icon.py  0006_alter_movie_category.py  0007_alter_movie_category.py  0008_category_is_visible_on_home_category_position.py  0009_category_slug_movie_slug.py  0010_alter_category_slug_alter_movie_slug.py  0011_subtitle.py  0012_actor_slug_genre_slug_alter_movie_category.py  0013_alter_actor_slug_alter_category_slug_and_more.py  0014_alter_movie_slug.py  0015_movie_movie_type.py  0016_alter_item_url.py  0017_alter_item_url.py
kinohub/movies/static/movies/: main.js  playerjs.js  style.css
kinohub/movies/templates/movies/: base.html  category_view.html  index.html  movie_detail.html
